# The-Batch-MultimodalRAG

./: .dockerignore  .env.example  .gitattributes  .gitignore  Dockerfile  Multimodal RAG Articles.ipynb  Multimodal RAG evaluation.ipynb  Multimodal RAG.ipynb  README.md  fetch_articles.ipynb  pyproject.toml  requirements.txt  run.py
app/modules/embedder/: multi_modal_embedder.py  utils.py
app/modules/image_processor/: image_describer.py  utils.py
app/modules/qa_chain_composer/: articles_qa_runner.py  utils.py
app/modules/scraper/: article_scraper.py  utils.py
app/pipelines/: workflow.py
app/utils/: func.py
notebooks/: Multimodal RAG Articles.ipynb  Preprocess Image Descriptions.ipynb
